# structural-break

./: .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  README.md  baseline.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: README.md  test.csv  train.csv
docs/: data.md  methodology.md
outputs/: submission.csv
scripts/: baseline.py  compare_methods.py
src/structural_break/: __init__.py  data.py  detectors.py  evaluation.py  features.py  models.py  predict.py  synthetic.py  visualization.py
tests/: conftest.py  test_change_point_eval.py  test_cli.py  test_detectors.py  test_features.py  test_models.py  test_prediction_output.py  test_visualization.py
