[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-break"
version = "0.1.0"
description = "Structural break and change-point detection for time-series data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "joblib>=1.1",
]

[project.urls]
Homepage = "https://github.com/WolfpackOfOne/structural-break"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["baseline.ipynb"]

[tool.ruff.lint]
# pycodestyle, Pyflakes, isort, pyupgrade, flake8-bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

